visualisation.ipynb updated

--- a/ml.ipynb
+++ b/ml.ipynb
@@ -6,15 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-13T14:32:50.147162Z",
-     "start_time": "2025-01-13T14:32:50.092775Z"
+     "end_time": "2025-01-14T12:00:06.242865Z",
+     "start_time": "2025-01-14T12:00:05.244203Z"
     }
    },
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv('data/l3T.csv')\n",
-    "df.head()"
+    "l3T = pd.read_csv('data/l3T.csv')\n",
+    "l3T.head()"
    ],
    "outputs": [
     {
@@ -112,12 +113,30 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "plt.figure(figsize=(15, 7))\n",
+    "\n",
+    "for host in all_hosts:\n",
+    "    df2 = logs1[logs1['host'] == host]\n",
+    "    plt.scatter(df2['clientIp'], df2['count'], label=host)\n",
+    "\n",
+    "plt.xticks(rotation=90)\n",
+    "#plt.legend()\n",
+    "plt.show()"
+   ],
+   "id": "c5bd0420b17c0998"
   }
  ],
  "metadata": {
